# cmsis-toolbox

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  ADR System test framework.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  search.html
.github/: ctools.json.in  lychee.toml  (+7 more)
test/: CMakeLists.txt  RobotTests.md  __init__.robot  conftest.py  local_example_tests.robot  pack_example_tests.csv  pack_example_tests.robot  reference.md  remote_example_tests.csv  remote_example_tests.robot  requirements.txt  test.robot  tests.py  vcpkg-configuration.json
test/data/build-asm/: solution.csolution.yml
test/data/build-asm/project/: .clangd  project.cproject.yml
test/data/build-asm/project/AC6/: AsmArm.s  Auto.s  GnuSyntax.s
test/data/build-asm/project/GCC/: GAS.s  PreProcessed.S
test/data/build-asm/project/IAR/: Asm.s
test/data/build-c/: solution.csolution.yml
test/data/build-c/project/: project.cproject.yml
test/data/build-cpp/: solution.csolution.yml
test/data/build-set/: solution.csolution.yml
test/data/executes/: solution.csolution.yml
test/data/executes/project/: project.cproject.yml  source.c.template
test/data/executes/script/: generate-sources.cmake  sign.cmake
test/data/include-define/: solution.cbuild-idx.yml  solution.cbuild-pack.yml  solution.csolution.yml
test/data/include-define/project/: asm.s  project.AC6+ARMCM0.cbuild.yml  project.CLANG+ARMCM0.cbuild.yml  project.GCC+ARMCM0.cbuild.yml  project.GCC+ARMCM0.cprj  project.IAR+ARMCM0.cbuild.yml  project.cproject.yml  source1.c
test/data/include-define/project/RTE/_GCC_ARMCM0/: RTE_Components.h
test/data/include-define/project/file/: file.s
test/data/include-define/project/inc3/: inc.h
test/data/include-define/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
test/data/include-define/tmp/1/: CMakeCache.txt  cmake_install.cmake  compile_commands.json
test/data/include-define/tmp/project.GCC+ARMCM0/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
test/data/include-define/tmp/project.GCC+ARMCM0/tmp/: project.GCC+ARMCM0-cfgcmd.txt  project.GCC+ARMCM0-mkdirs.cmake
test/data/language-scope/: solution.cbuild-idx.yml  solution.csolution.yml
test/data/language-scope/pack/LanguageAndScope/: Dummy1.c  Dummy2.cpp
test/data/language-scope/project/: main.c  project.AC6+ARMCM0.cbuild.yml  project.AC6+ARMCM0.cprj  project.CLANG+ARMCM0.cbuild.yml  project.CLANG+ARMCM0.cprj  project.GCC+ARMCM0.cbuild.yml  project.GCC+ARMCM0.cprj  project.IAR+ARMCM0.cbuild.yml
test/data/language-scope/project/RTE/_AC6_ARMCM0/: RTE_Components.h
test/data/language-scope/project/RTE/_CLANG_ARMCM0/: RTE_Components.h
test/data/language-scope/project/RTE/_GCC_ARMCM0/: RTE_Components.h
test/data/language-scope/ref/project.AC6+ARMCM0/: CMakeLists.txt
test/data/language-scope/ref/project.CLANG+ARMCM0/: CMakeLists.txt  components.cmake  groups.cmake
test/data/language-scope/ref/project.GCC+ARMCM0/: CMakeLists.txt
test/data/language-scope/ref/project.IAR+ARMCM0/: CMakeLists.txt
test/data/library-rtos/: solution.csolution.yml
test/data/library-rtos/project/: main.c  project.cproject.yml
test/data/linker-pre-processing/: solution.csolution.yml
test/data/linker-pre-processing/project/: main.c  project.cproject.yml
test/data/pre-include/: solution.csolution.yml
test/data/pre-include/pack/Files/: config-header2.h  header1.h  test1.c  test2.c
test/data/pre-include/project/: project.cproject.yml
test/data/trustzone/nonsecurecode/: nonsecure.cproject.yml
test/data/trustzone/securecode/: secure.cproject.yml
test/data/whitespace/: solution.csolution.yml
test/data/whitespace/project/: project.cproject.yml
test/data/whitespace/project/tes t/: tes t.h
test/e2e/: RobotTests.md  local_example_tests.robot  pack_example_tests.csv  pack_example_tests.robot  reference.md  remote_example_tests.csv  remote_example_tests.robot  requirements.txt
test/e2e/data/build-asm/project/: .clangd  project.cproject.yml
test/e2e/data/build-asm/project/AC6/: Auto.s  GnuSyntax.s  PreProcessed.S
test/e2e/data/build-asm/project/GCC/: NonPreProcessed.s  PreProcessed.S
test/e2e/data/build-c/: solution.csolution.yml
test/e2e/data/build-cpp/: solution.csolution.yml
test/e2e/data/build-cpp/project/: main.cpp  project.cproject.yml
test/e2e/data/build-set/: solution.csolution.yml
test/e2e/data/executes/: solution.csolution.yml
test/e2e/data/executes/project/: project.cproject.yml
test/e2e/data/executes/script/: archive.cmake
test/e2e/data/include-define/: solution.csolution.yml
test/e2e/data/include-define/project/: main.c  project.cproject.yml  random_config1.h  random_config2.h  source2.c  source3.c
test/e2e/data/language-scope/: solution.csolution.yml
test/e2e/data/language-scope/pack/: ARM.RteTest.pdsc
test/e2e/data/language-scope/project/: project.cproject.yml
test/e2e/data/library-rtos/: solution.csolution.yml
test/e2e/data/library-rtos/project/: project.cproject.yml
test/e2e/data/linker-pre-processing/: solution.csolution.yml
test/e2e/data/pre-include/: solution.csolution.yml
test/e2e/data/pre-include/pack/: ARM.PreIncludeTestPack.pdsc
test/e2e/data/trustzone/: solution.csolution.yml
test/e2e/data/trustzone/nonsecurecode/: main_ns.c  nonsecure.cproject.yml
test/e2e/data/trustzone/securecode/: interface.c  main_s.c  secure.cproject.yml  tz_context.c
test/e2e/data/whitespace/: solution.csolution.yml
test/e2e/data/whitespace/project/: project.cproject.yml
test/e2e/lib/: elf_compare.py  execution_summary.py  reference_compare.py  utils.py
test/e2e/resources/: exec.resource  global.resource  utils.resource
test/lib/: elf_compare.py  execution_summary.py  reference_compare.py  utils.py
test/packaging/: tests.py
test/performance/: check_perf_regression.py  generate_comparison.py  input_example_repos.txt  requirements.txt
test/resources/: exec.resource  global.resource  utils.resource
test/src/: InstallerTests.cpp  ToolboxTestEnv.cpp  __init__.robot  global.robot  test.robot
(+155 files in other folders)
